# ChangeLog for app-admin/eselect-emacs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 May 2008; Ulrich Mueller <ulm@gentoo.org> -files/emacs-updater,
  -eselect-emacs-1.5_pre1.ebuild:
  Remove old.

*eselect-emacs-1.5_pre1 (23 May 2008)

  23 May 2008; Ulrich Mueller <ulm@gentoo.org> +files/emacs-updater,
  +eselect-emacs-1.5_pre1.ebuild:
  Prerelease.

  01 May 2008; Ulrich Mueller <ulm@gentoo.org> eselect-emacs-9999.ebuild:
  etags.eselect is created from Makefile.

*eselect-emacs-9999 (30 Apr 2008)

  30 Apr 2008; Ulrich Mueller <ulm@gentoo.org> +metadata.xml,
  +eselect-emacs-9999.ebuild:
  Live SVN ebuild.
