@@ -1,0 +1,3 @@
+EBUILD emacs-updater-9999.ebuild 668 RMD160 a68104496febdd4b933aa410d0e560b6d9d88068 SHA1 eba258942f89d6cec5247f68fe5e7d74f7d97ff8 SHA256 bbe3ea69f6bbfccd3641e7f7dd486e99194f4d7e49a439f9e62cca9f16e7defb
+MISC ChangeLog 349 RMD160 62ead48e14d914ad70f2d2ab1dbdac652dfb4ba0 SHA1 1646c7285afe7e56be1bb4df037553627292bfc1 SHA256 419e1453a75c43b4802f7df1cd1c6d62853ebaddb14da10c6ec9fc837049715f
+MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
