@@ -1,3 +1,3 @@
-EBUILD eselect-emacs-9999.ebuild 905 RMD160 235e8be13739cdf373b7e48588998ef0c184fe3c SHA1 66fe06c711c08b0f5bda35edc8075578c60509cd SHA256 3bac5377ffe9054e41097a75efdcdcaecd67ae6ab9390edd72e311f85f068a43
-MISC ChangeLog 663 RMD160 70f1bc08d72e6f0da013b83ca9a2fae4690dcf67 SHA1 47b463ca6a4353b11c6eb31db42c4fa8eb620396 SHA256 5802c92a566da522bb07b588002153d876eb11b6e0bec520d1a7434b6e2d41dc
+EBUILD eselect-emacs-9999-r1.ebuild 756 RMD160 68ce1e1ad72c1061d11c527de95545624efb79cb SHA1 affa1c7f6c1d2ab43f8fce08137b4589da79d241 SHA256 6342eac8f3708bd95ce2136f7a17103e29a20b42d523312e4cab80ee550b082c
+MISC ChangeLog 855 RMD160 4f26e318dda831c3d6378e7ba8a11cf12fbf2f24 SHA1 b92e747caab441be5e329097e8b10d4269c75bbd SHA256 7ef9aad9682bf7f4b91348d5ad74c740850ff892e6df8b0d7872bb708fb13ca4
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
