@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*eselect-emacs-9999-r1 (15 Aug 2008)
+
+  15 Aug 2008; Ulrich Mueller <ulm@gentoo.org> -eselect-emacs-9999.ebuild,
+  +eselect-emacs-9999-r1.ebuild:
+  emacs-updater split off as an own package.
+
   25 May 2008; Ulrich Mueller <ulm@gentoo.org> -files/emacs-updater,
   -eselect-emacs-1.5_pre1.ebuild:
   Remove old.
